Changed CurrencyService